Fix navbar :trophy: and elements alignment

--- a/src/components/shared/Navbar.css
+++ b/src/components/shared/Navbar.css
@@ -33,20 +33,25 @@
   border-radius: 100px;
 }
 
-.star-icon-NavbarMobile {
+.Navbar-trophy-icon {
   color: #FAC748;
   font-size: 1.8rem;
-  margin-right: 26px;
-  display: flex;
-  align-items: center;
 }
 
-.p-victory-point-NavbarMobile {
+.Navbar-trophy-wrapper {
   position: relative;
-  bottom: 6px;
-  right: 20px;
+  padding: 0 10px;
+}
+
+.Navbar-victory-points {
+  position: absolute;
+  left: 0;
+  top: 10%;
+  width: 100%;
+  text-align: center;
   color: black;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
+  font-family: FuturaPTMedium;
 }
 
 .fa-sign-out-alt {
@@ -55,8 +60,18 @@
   color: #FAC748;
 }
 
-.Logout {
+.Logout-text {
   display: none;
+}
+
+.btn-Logout {
+  background: transparent;
+  border: none;
+  color: #FAC748;
+  font-weight: bold;
+  font-size: 1.3rem;
+  cursor: pointer;
+  padding: 0 0 0 10px;
 }
 
 @media screen and (min-width: 600px) {
@@ -85,30 +100,16 @@
     padding: 10px;
   }
 
-  .star-icon-NavbarMobile {
+  .Navbar-trophy-icon {
     font-size: 2.8rem;
-    margin-right: 26px;
-  }
-
-  .p-victory-point-NavbarMobile {
-    top: 2px;
-    right: 37px;
-    font-size: 1.2rem;
   }
 
   .fa-sign-out-alt {
     display: none;
   }
 
-  .Logout {
+  .Logout-text {
     display: inline;
-  }
-
-  .p-Logout {
-    color: #FAC748;
-    font-weight: bold;
-    font-size: 1.3rem;
-    cursor: pointer;
   }
 }
 
@@ -121,7 +122,12 @@
     font-size: 2.2rem;
   }
 
-  .star-icon-NavbarMobile {
-    margin-right: 15px;
+  .Navbar-trophy-wrapper {
+    padding: 0 5px;
+  }
+
+  .Navbar-victory-points {
+    font-size: 0.9rem;
+    top: 5%;
   }
 }
